@@ -12,7 +12,6 @@
 #'    generate random motifs with [create_motif()].
 #' @param shuffle.k `numeric(1)` See [shuffle_motifs()].
 #' @param shuffle.method `character(1)` See [shuffle_motifs()].
-#' @param shuffle.leftovers Deprecated. Does nothing.
 #' @param rand.tries `numeric(1)` Number of random motifs to create for
 #'    P-value computation.
 #' @param widths `numeric` Motif widths to use in P-value database calculation.
@@ -53,7 +52,6 @@ make_DBscores <- function(db.motifs,
                           method = c("PCC", "MPCC", "EUCL", "MEUCL", "SW", "MSW", "KL", "MKL"),
                           shuffle.db = TRUE,
                           shuffle.k = 3, shuffle.method = "linear",
-                          shuffle.leftovers = NULL,
                           rand.tries = 100, widths = 5:30,
                           min.position.ic = 0,
                           normalise.scores = TRUE, min.overlap = 6,
@@ -94,8 +92,6 @@ make_DBscores <- function(db.motifs,
   if (length(all_checks) > 0) stop(all_checks_collapse(all_checks))
   #---------------------------------------------------------
 
-  if (!is.null(shuffle.leftovers))
-    warning("'shuffle.leftovers' is deprecated and does nothing", immediate. = TRUE)
   if (BP) warning("'BP' is deprecated; use 'nthreads' instead", immediate. = TRUE)
 
   db.motifs <- convert_motifs(db.motifs)
